# toolGDBH

./: .gitignore
toolGDBH/: .gitignore  README.md  kehoach.md  pyproject.toml  reade.md
toolGDBH/1.căn cứ pháp luật/: Quyết-định-130-QĐ-BYT.doc  Quyết-định-3276-QĐ-BYT.docx  Quyết-định-4750-QĐ-BYT.docx  Thông-tư-12-2026-TT-BTC.docx  Thông-tư-39-2024-TT-BYT.docx
toolGDBH/1.căn cứ pháp luật/Quyết-định-3176-QĐ-BYT-20260330152814/: 3176_QD-BYT.docx  Bang 1. Chi tieu tong hop kham benh chua benh.docx  Bang 10. Chi tieu du lieu giay chung nhan nghi duong thai.docx  Bang 11. Chi tieu du lieu giay chung nhan nghi viec huong bao hiem xa hoi.docx  Bang 12. Chi tieu du lieu giam dinh y khoa.docx  Bang 13. Chi tieu du lieu giay chuyen tuyen_chuyen co so kham benh chua benh bao hiem y te.docx  Bang 14. Chi tieu du lieu giay hen kham lai.docx  Bang 2. Chi tieu chi tiet thuoc.docx  Bang 3. Chi tieu chi tiet dich vu ky thuat va vat tu y te.docx  Bang 4. Chi tieu chi tiet dich vu can lam sang.docx  Bang 5. Chi tieu chi tiet dien bien lam sang.docx  Bang 6. Chi tieu ho so benh an cham soc va dieu tri HIV_AIDS.docx  Bang 7. Chi tieu du lieu giay ra vien.docx  Bang 8. Chi tieu du lieu tom tat ho so benh an.docx  (+2 more)
toolGDBH/scripts/: apply_guideline_internal_code_mapping.py  build_guideline_candidates.py  build_guideline_rule_drafts.py  build_xml5_kb_artifacts.py  export_diagnosis_case_records.py  export_xml5_note_records.py  filter_guideline_business_candidates.py  run_diagnosis_validation.py  run_mvp.py  run_xml5_retrieval_baseline.py
toolGDBH/tests/: conftest.py
xulyXML/: README.md  (+1 more)
(+118 files in other folders)
